--- a/MauiApp1/MainPage.xaml
+++ b/MauiApp1/MainPage.xaml
@@ -30,7 +30,12 @@
             Grid.Column="1"
             />
         
-        <CollectionView Grid.Row="2" Grid.ColumnSpan="2" ItemsSource="{Binding Items}">
+        <CollectionView 
+            Grid.Row="2" 
+            Grid.ColumnSpan="2" 
+            ItemsSource="{Binding Items}"
+            SelectionMode="None"            
+            >
             <CollectionView.ItemTemplate>
                 <DataTemplate x:DataType="{x:Type x:String}">
                     <SwipeView>
@@ -46,6 +51,12 @@
                         </SwipeView.RightItems>
                         <Grid Padding="1">
                             <Frame>
+                                <Frame.GestureRecognizers>
+                                    <TapGestureRecognizer  
+                                        Command="{Binding Source={RelativeSource AncestorType={x:Type viewmodel:MainViewModel}}, Path=TapCommand }"
+                                        CommandParameter="{Binding .}"
+                                        />
+                                </Frame.GestureRecognizers>
                                 <Label 
                                     Text="{Binding .}" 
                                     FontSize="24"
